tests/expectations/parser/program/pipe_eof.out
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'fn', 'final', 'const', 'mapping', 'storage', 'script' -- found '|'
    --> test:6:5
     |
   6 |     |}
     |     ^
